fixed username overflowing in smaller viewport

--- a/public/styles/feed.css
+++ b/public/styles/feed.css
@@ -2,8 +2,8 @@
 
 /* Entire Container Article */
 .feed-article {
-  width: 100% !important;  
-  min-width: inherit !important;
+  width: 100%;  
+  /* min-width: inherit; */
   height: 390px;
   display: flex;
   flex-direction: column;
